--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 #Section-1 {
-    background-image: url('/School-pic.jpeg');
+    background-image: url('/https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/School-pic.jpeg');
     background-repeat: no-repeat;
     background-size: 125% 150%;
     background-blend-mode: darken;
