--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 #Section-1 {
-    background-image: url('/IMAGES/School-pic.jpeg');
+    background-image: url('/Personal_Project/IMAGES/School-pic.jpeg');
     background-repeat: no-repeat;
     background-size: 125% 150%;
     background-blend-mode: darken;
